--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-dockerfile
 {
-	"name": "Existing Dockerfile",
+	"name": "minf2 Dockerfile",
 	"build": {
 		// Sets the run context to one level up instead of the .devcontainer folder.
 		"context": "..",
@@ -25,7 +25,8 @@
 				"ms-python.python",
 				"ms-python.debugpy",
 				"smilerobotics.urdf",
-				"redhat.vscode-xml"
+				"redhat.vscode-xml",
+				"unifiedjs.vscode-mdx"
 			]
 		}
 	}
