added extension to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,8 @@
 				"ms-python.debugpy",
 				"smilerobotics.urdf",
 				"redhat.vscode-xml",
-				"unifiedjs.vscode-mdx"
+				"unifiedjs.vscode-mdx",
+				"ms-toolsai.jupyter-keymap"
 			]
 		}
 	}
