--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,33 +1,26 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-dockerfile
 {
-	"name": "minf2 Dockerfile",
+	"name": "Existing Dockerfile",
 	"build": {
 		// Sets the run context to one level up instead of the .devcontainer folder.
 		"context": "..",
 		// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
 		"dockerfile": "../Dockerfile"
 	},
-	"features": {
-		"ghcr.io/devcontainers/features/github-cli:1": {
-			"installDirectlyFromGitHubRelease": true,
-			"version": "latest"
-		}
-	},
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"ms-python.vscode-pylance",
-				"ms-toolsai.jupyter",
+				"ms-python.python",
 				"GitHub.copilot",
 				"GitHub.copilot-chat",
-				"ms-python.isort",
-				"ms-python.python",
-				"ms-python.debugpy",
+				"ms-toolsai.jupyter",
+				"kiteco.kite",
+				"esbenp.prettier-vscode",
+				"ms-python.vscode-pylance",
 				"smilerobotics.urdf",
 				"redhat.vscode-xml",
-				"unifiedjs.vscode-mdx",
-				"ms-toolsai.jupyter-keymap"
+				"ms-toolsai.jupyter-renderers"
 			]
 		}
 	}
@@ -40,6 +33,9 @@
 
 	// Uncomment the next line to run commands after the container is created.
 	// "postCreateCommand": "cat /etc/os-release",
+
+	// Configure tool-specific properties.
+	// "customizations": {},
 
 	// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "devcontainer"
